# wood-quality-assessment-agent-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  SKILL.md  progression.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
assets/diagrams/: system_architecture.md
assets/examples/: sample_input.json  sample_output.md
config/: settings.yaml
config/schemas/: tool_schemas.json
references/: cites_listings.json  iucn_status.json  species_database.json
references/templates/: output_template.md
scripts/: __init__.py  hooks_system.py  reference_data.py  seed_reference_data.py  setup.py  skill_loader.py  tools_registry.py  validator.py
skills/: main.md  sub-authenticity-compliance.md  sub-evidence-collector.md  sub-gather-requirements.md  sub-grain-image-analysis.md  sub-knowledge-updater.md  sub-physical-property-analysis.md  sub-quality-advisor.md  sub-router.md
tests/: TEST_RESULTS.md  test-scenarios.md
tools/: __init__.py  knowledge_updater.py  run_test_scenarios.py  test_knowledge_updater.py  test_reference_data.py  test_tools_registry.py
